src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BMW</fullName>
                </value>
                <value>
                    <fullName>Fiat</fullName>
                </value>
                <value>
                    <fullName>Ford</fullName>
                </value>
                <value>
                    <fullName>Kia</fullName>
                </value>
                <value>
                    <fullName>Mazda</fullName>
                </value>
                <value>
                    <fullName>Opel</fullName>
                </value>
                <value>
                    <fullName>Volkswagen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Engine__c</fullName>
        <label>Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Brand__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Golf</fullName>
                </value>
                <value>
                    <fullName>Polo</fullName>
                </value>
                <value>
                    <fullName>Mondeo</fullName>
                </value>
                <value>
                    <fullName>318</fullName>
                </value>
                <value>
                    <fullName>525</fullName>
                </value>
                <value>
                    <fullName>626</fullName>
                </value>
                <value>
                    <fullName>323</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>Brava</fullName>
                </value>
                <value>
                    <fullName>Multipla</fullName>
                </value>
                <value>
                    <fullName>Insignia</fullName>
                </value>
                <value>
                    <fullName>Corsa</fullName>
                </value>
                <value>
                    <fullName>Astra</fullName>
                </value>
                <value>
                    <fullName>Ceed</fullName>
                </value>
                <value>
                    <fullName>Stinger</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Doors__c</fullName>
        <label>Number of Doors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Production_Year__c</fullName>
        <label>Production Year</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>